// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages API Copy Can copy a page 1: [body] 1`] = `
Object {
  "pages": Array [
    Object {
      "authors": Any<Array>,
      "canonical_url": null,
      "codeinjection_foot": null,
      "codeinjection_head": null,
      "comment_id": Any<String>,
      "count": Object {
        "negative_feedback": 0,
        "paid_conversions": 0,
        "positive_feedback": 0,
        "signups": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "custom_excerpt": null,
      "custom_template": null,
      "excerpt": null,
      "feature_image": null,
      "feature_image_alt": null,
      "feature_image_caption": null,
      "featured": false,
      "frontmatter": null,
      "html": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "lexical": null,
      "meta_description": null,
      "meta_title": null,
      "mobiledoc": "{\\"version\\":\\"0.3.1\\",\\"ghostVersion\\":\\"4.0\\",\\"markups\\":[],\\"atoms\\":[],\\"cards\\":[],\\"sections\\":[[1,\\"p\\",[[0,[],0,\\"\\"]]]]}",
      "og_description": null,
      "og_image": null,
      "og_title": null,
      "post_revisions": Any<Array>,
      "primary_author": Any<Object>,
      "primary_tag": Any<Object>,
      "published_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "show_title_and_feature_image": Any<Boolean>,
      "slug": "test-page-2",
      "status": "published",
      "tags": Any<Array>,
      "tiers": Array [
        Object {
          "active": true,
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "currency": null,
          "description": null,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "monthly_price": null,
          "monthly_price_id": null,
          "name": "Free",
          "slug": "free",
          "trial_days": 0,
          "type": "free",
          "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "visibility": "public",
          "welcome_page_url": null,
          "yearly_price": null,
          "yearly_price_id": null,
        },
        Object {
          "active": true,
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "currency": "usd",
          "description": null,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "monthly_price": 500,
          "monthly_price_id": null,
          "name": "Default Product",
          "slug": "default-product",
          "trial_days": 0,
          "type": "paid",
          "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "visibility": "public",
          "welcome_page_url": null,
          "yearly_price": 5000,
          "yearly_price_id": null,
        },
      ],
      "title": "Test Page",
      "twitter_description": null,
      "twitter_image": null,
      "twitter_title": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": Any<String>,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "public",
    },
  ],
}
`;

exports[`Pages API Copy Can copy a page 2: [body] 1`] = `
Object {
  "pages": Array [
    Object {
      "authors": Any<Array>,
      "canonical_url": null,
      "codeinjection_foot": null,
      "codeinjection_head": null,
      "comment_id": Any<String>,
      "count": Object {
        "negative_feedback": 0,
        "paid_conversions": 0,
        "positive_feedback": 0,
        "signups": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "custom_excerpt": null,
      "custom_template": null,
      "excerpt": null,
      "feature_image": null,
      "feature_image_alt": null,
      "feature_image_caption": null,
      "featured": false,
      "frontmatter": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "lexical": null,
      "meta_description": null,
      "meta_title": null,
      "mobiledoc": "{\\"version\\":\\"0.3.1\\",\\"ghostVersion\\":\\"4.0\\",\\"markups\\":[],\\"atoms\\":[],\\"cards\\":[],\\"sections\\":[[1,\\"p\\",[[0,[],0,\\"\\"]]]]}",
      "og_description": null,
      "og_image": null,
      "og_title": null,
      "post_revisions": Any<Array>,
      "primary_author": Any<Object>,
      "primary_tag": Any<Object>,
      "published_at": null,
      "show_title_and_feature_image": Any<Boolean>,
      "slug": "test-page-copy",
      "status": "draft",
      "tags": Any<Array>,
      "tiers": Array [
        Object {
          "active": true,
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "currency": null,
          "description": null,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "monthly_price": null,
          "monthly_price_id": null,
          "name": "Free",
          "slug": "free",
          "trial_days": 0,
          "type": "free",
          "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "visibility": "public",
          "welcome_page_url": null,
          "yearly_price": null,
          "yearly_price_id": null,
        },
        Object {
          "active": true,
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "currency": "usd",
          "description": null,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "monthly_price": 500,
          "monthly_price_id": null,
          "name": "Default Product",
          "slug": "default-product",
          "trial_days": 0,
          "type": "paid",
          "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "visibility": "public",
          "welcome_page_url": null,
          "yearly_price": 5000,
          "yearly_price_id": null,
        },
      ],
      "title": "Test Page (Copy)",
      "twitter_description": null,
      "twitter_image": null,
      "twitter_title": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": Any<String>,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "public",
    },
  ],
}
`;

exports[`Pages API Copy Can copy a page 3: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "3667",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/pages\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Pages API Update Can modify hide_title_and_feature_image property 1: [body] 1`] = `
Object {
  "pages": Array [
    Object {
      "authors": Any<Array>,
      "canonical_url": null,
      "codeinjection_foot": null,
      "codeinjection_head": null,
      "comment_id": Any<String>,
      "count": Object {
        "negative_feedback": 0,
        "paid_conversions": 0,
        "positive_feedback": 0,
        "signups": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "custom_excerpt": null,
      "custom_template": null,
      "excerpt": null,
      "feature_image": null,
      "feature_image_alt": null,
      "feature_image_caption": null,
      "featured": false,
      "frontmatter": null,
      "hide_title_and_feature_image": true,
      "html": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "lexical": null,
      "meta_description": null,
      "meta_title": null,
      "mobiledoc": "{\\"version\\":\\"0.3.1\\",\\"ghostVersion\\":\\"4.0\\",\\"markups\\":[],\\"atoms\\":[],\\"cards\\":[],\\"sections\\":[[1,\\"p\\",[[0,[],0,\\"\\"]]]]}",
      "og_description": null,
      "og_image": null,
      "og_title": null,
      "post_revisions": Any<Array>,
      "primary_author": Any<Object>,
      "primary_tag": Any<Object>,
      "published_at": null,
      "slug": "test-page",
      "status": "draft",
      "tags": Any<Array>,
      "tiers": Array [
        Object {
          "active": true,
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "currency": null,
          "description": null,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "monthly_price": null,
          "monthly_price_id": null,
          "name": "Free",
          "slug": "free",
          "trial_days": 0,
          "type": "free",
          "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "visibility": "public",
          "welcome_page_url": null,
          "yearly_price": null,
          "yearly_price_id": null,
        },
        Object {
          "active": true,
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "currency": "usd",
          "description": null,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "monthly_price": 500,
          "monthly_price_id": null,
          "name": "Default Product",
          "slug": "default-product",
          "trial_days": 0,
          "type": "paid",
          "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "visibility": "public",
          "welcome_page_url": null,
          "yearly_price": 5000,
          "yearly_price_id": null,
        },
      ],
      "title": "Test Page",
      "twitter_description": null,
      "twitter_image": null,
      "twitter_title": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": Any<String>,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "public",
    },
  ],
}
`;

exports[`Pages API Update Can modify hide_title_and_feature_image property 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "3667",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": "/p/80038ac3-4ec7-4f4b-8b30-9aacf306ee1e/",
  "x-powered-by": "Express",
}
`;

exports[`Pages API Update Can modify show_title_and_feature_image property 1: [body] 1`] = `
Object {
  "pages": Array [
    Object {
      "authors": Any<Array>,
      "canonical_url": null,
      "codeinjection_foot": null,
      "codeinjection_head": null,
      "comment_id": Any<String>,
      "count": Object {
        "negative_feedback": 0,
        "paid_conversions": 0,
        "positive_feedback": 0,
        "signups": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "custom_excerpt": null,
      "custom_template": null,
      "excerpt": null,
      "feature_image": null,
      "feature_image_alt": null,
      "feature_image_caption": null,
      "featured": false,
      "frontmatter": null,
      "html": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "lexical": null,
      "meta_description": null,
      "meta_title": null,
      "mobiledoc": "{\\"version\\":\\"0.3.1\\",\\"ghostVersion\\":\\"4.0\\",\\"markups\\":[],\\"atoms\\":[],\\"cards\\":[],\\"sections\\":[[1,\\"p\\",[[0,[],0,\\"\\"]]]]}",
      "og_description": null,
      "og_image": null,
      "og_title": null,
      "post_revisions": Any<Array>,
      "primary_author": Any<Object>,
      "primary_tag": Any<Object>,
      "published_at": null,
      "show_title_and_feature_image": false,
      "slug": "test-page",
      "status": "draft",
      "tags": Any<Array>,
      "tiers": Array [
        Object {
          "active": true,
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "currency": null,
          "description": null,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "monthly_price": null,
          "monthly_price_id": null,
          "name": "Free",
          "slug": "free",
          "trial_days": 0,
          "type": "free",
          "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "visibility": "public",
          "welcome_page_url": null,
          "yearly_price": null,
          "yearly_price_id": null,
        },
        Object {
          "active": true,
          "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "currency": "usd",
          "description": null,
          "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
          "monthly_price": 500,
          "monthly_price_id": null,
          "name": "Default Product",
          "slug": "default-product",
          "trial_days": 0,
          "type": "paid",
          "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
          "visibility": "public",
          "welcome_page_url": null,
          "yearly_price": 5000,
          "yearly_price_id": null,
        },
      ],
      "title": "Test Page",
      "twitter_description": null,
      "twitter_image": null,
      "twitter_title": null,
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "url": Any<String>,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "public",
    },
  ],
}
`;

exports[`Pages API Update Can modify show_title_and_feature_image property 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "3668",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Origin, Accept-Encoding",
  "x-cache-invalidate": Any<String>,
  "x-powered-by": "Express",
}
`;
